# prismdrake-de

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Makefile  README.md  SECURITY.md
experiments/pd1-toolkit-spike/: CMakeLists.txt  README.md
src/config/: CMakeLists.txt  Configuration.hpp  ConfigurationLoader.cpp  ConfigurationLoader.hpp  ConfigurationParser.cpp  ConfigurationParser.hpp
src/foundation/: AtomicFile.cpp  AtomicFile.hpp  BoundedFile.cpp  BoundedFile.hpp  BuildInfo.cpp  BuildInfo.hpp  BuildInfoConfig.hpp.in  CMakeLists.txt  Cancellation.hpp  Diagnostics.cpp  Diagnostics.hpp  ExitStatus.hpp  Generation.hpp  MonotonicClock.hpp  Result.hpp  SessionReadinessProtocol.hpp  XdgPaths.cpp  XdgPaths.hpp
src/ipc/: CMakeLists.txt  SdBusApi.cpp  SdBusApi.hpp
src/launcher/: ApplicationCatalog.cpp  ApplicationCatalog.hpp  ApplicationPaths.cpp  ApplicationPaths.hpp  ApplicationSearch.cpp  ApplicationSearch.hpp  CMakeLists.txt  DesktopEntry.hpp  DesktopEntryDiscovery.cpp  DesktopEntryDiscovery.hpp  DesktopEntryParser.cpp  DesktopEntryParser.hpp  DesktopEntryVisibility.cpp  DesktopEntryVisibility.hpp  DesktopExec.cpp  DesktopExec.hpp  DesktopExecutable.cpp  DesktopExecutable.hpp  DesktopFileId.cpp  DesktopFileId.hpp  DetachedApplication.cpp  DetachedApplication.hpp  ProcessLaunch.cpp  ProcessLaunch.hpp
src/notifications/: CMakeLists.txt  NotificationModel.cpp  NotificationModel.hpp
src/session/: CMakeLists.txt  ChildProcess.cpp  ChildProcess.hpp  RestartPolicy.cpp  RestartPolicy.hpp  SessionEnvironment.cpp  SessionEnvironment.hpp  SessionOptions.cpp  SessionOptions.hpp  SessionRuntime.cpp  SessionRuntime.hpp  SessionSupervisor.cpp  SessionSupervisor.hpp  SettingsReadiness.cpp  SettingsReadiness.hpp  main.cpp
src/settings/: CMakeLists.txt  RuntimeSnapshot.cpp  RuntimeSnapshot.hpp  SettingsEngine.cpp  SettingsEngine.hpp  SettingsSnapshot.cpp  SettingsSnapshot.hpp
src/settingsd/: CMakeLists.txt  SdBusApi.cpp  SdBusApi.hpp  ServiceOptions.cpp  ServiceOptions.hpp  ServiceWorker.cpp  ServiceWorker.hpp  SettingsService.cpp  SettingsService.hpp  main.cpp
src/theme/: CMakeLists.txt  Theme.hpp  ThemeBundle.cpp  ThemeBundle.hpp  ThemeParser.cpp  ThemeParser.hpp  ThemeResolver.cpp  ThemeResolver.hpp
src/x11/: AtomCache.cpp  AtomCache.hpp  CMakeLists.txt  DockProperties.cpp  DockProperties.hpp  DockPropertiesInternal.hpp  EwmhCapabilities.cpp  EwmhCapabilities.hpp  EwmhCapabilitiesInternal.hpp  EwmhTaskList.cpp  EwmhTaskList.hpp  EwmhTaskSource.cpp  EwmhTaskSource.hpp  EwmhWindowRequests.cpp  EwmhWindowRequests.hpp  EwmhWindowRequestsInternal.hpp  OutputTopology.cpp  OutputTopology.hpp  PanelStrutGeometry.cpp  PanelStrutGeometry.hpp  PropertyReader.cpp  PropertyReader.hpp  RandrTopology.cpp  RandrTopology.hpp  RootEventStream.cpp  RootEventStream.hpp  TaskModel.cpp  TaskModel.hpp  TaskRequestState.cpp  TaskRequestState.hpp  WindowMetadata.cpp  WindowMetadata.hpp  X11Connection.cpp  X11Connection.hpp  X11ConnectionPrivate.hpp  X11Types.cpp  X11Types.hpp
tests/: CMakeLists.txt
tests/accessibility/: CMakeLists.txt  atspi-evidence.schema.json  live_atspi.py  test_live_atspi.py
tests/fixtures/: ApplicationLaunchFixture.cpp  CMakeLists.txt  SessionChildFixture.cpp
tests/gentoo/: installed_artifact_attestation.py  lifecycle_hashes.py  pd1-installed-artifact-attestation.schema.json  pd1-portage-lifecycle-evidence.schema.json  portage_lifecycle_collector.py  portage_lifecycle_evidence.py  test_installed_artifact_attestation.py  test_portage_lifecycle_collector.py  test_portage_lifecycle_evidence.py  test_product_ebuild.py  test_vm_tools.py
tests/integration/: CMakeLists.txt  ControlledWindowFixture.cpp  DockPropertiesTests.cpp  EwmhCapabilitiesTests.cpp  EwmhTaskSourceTests.cpp  EwmhWindowRequestsTests.cpp  PropertyReaderTests.cpp  RandrTopologyTests.cpp  RootEventStreamTests.cpp  SettingsServiceTests.cpp  X11ConnectionTests.cpp  pd1-demo-evidence.schema.json  pd1_demo.py  run_with_xvfb.py  test_pd1_demo.py  test_run_with_xvfb.py
tests/performance/: CMakeLists.txt  PerformanceEvidenceRunner.cpp  VisualCadenceRunner.cpp  assert_cli_failure.py  collect_idle_wakeups.py  collect_live_session_performance.py  collect_startup_to_panel.py  collector_common.py  external-performance-evidence.schema.json  external_evidence_semantics.py  performance-evidence.schema.json  test_external_collectors.py  validate_evidence.py  validate_external_artifact.py  validate_external_evidence.py  validate_live_startup.py
tests/qt/: CMakeLists.txt  LauncherPresentationModelTests.cpp  NotificationListQmlFixture.cpp  NotificationListQmlFixture.hpp  NotificationListQmlTestRunner.cpp  NotificationPresentationModelTests.cpp  PanelSurfaceQmlFixture.cpp  PanelSurfaceQmlFixture.hpp  PanelSurfaceQmlTestRunner.cpp  ShellThemeSnapshotAdapterTests.cpp  TaskPresentationModelTests.cpp
tests/unit/: ApplicationCatalogTests.cpp  ApplicationPathsTests.cpp  ApplicationSearchTests.cpp  AtomicFileTests.cpp  BoundedFileTests.cpp  BuildInfoTests.cpp  CMakeLists.txt  ChildProcessTests.cpp  ConfigurationLoaderTests.cpp  ConfigurationParserTests.cpp  DesktopEntryDiscoveryTests.cpp  DesktopEntryParserTests.cpp  DesktopEntryVisibilityTests.cpp  DesktopExecTests.cpp  DesktopExecutableTests.cpp  DesktopFileIdTests.cpp  DetachedApplicationTests.cpp  DiagnosticsTests.cpp  DockPropertiesTests.cpp  EwmhTaskListTests.cpp  EwmhWindowRequestsTests.cpp  FoundationPrimitivesTests.cpp  LauncherPipelineTests.cpp  NotificationModelTests.cpp  OutputTopologyTests.cpp  PanelStrutGeometryTests.cpp  ProcessLaunchTests.cpp  PropertyReaderTests.cpp  RandrTopologyTests.cpp  RestartPolicyTests.cpp  ResultTests.cpp  RootEventStreamTests.cpp  RuntimeSnapshotParserTests.cpp  ServiceOptionsTests.cpp  ServiceWorkerTests.cpp  SessionEnvironmentTests.cpp  SessionOptionsTests.cpp  SessionRuntimeTests.cpp  SettingsEngineTests.cpp  SettingsReadinessTests.cpp  (+7 more)
tests/visual/: CMakeLists.txt  LauncherVisualBaselineTestRunner.cpp  NotificationVisualBaselineTestRunner.cpp  VisualThemeFixture.cpp  (+5 more)
(+200 files in other folders)
